# zheera

./: .env.example  .gitignore  README.md  list_models.py  pyproject.toml  requirements.txt
api/: index.py
bot/: ai.py  handlers.py
